feat: Migrate UI to Bulma CSS framework
- Replaced Tailwind CSS with Bulma for styling
- Refactored chat layout and components
- Improved floating date and search functionality

--- a/views/partials/message-list.ejs
+++ b/views/partials/message-list.ejs
@@ -1,8 +1,8 @@
-<% let lastDate=null; messages.forEach(m => { %>
-    <% if (m.date !==lastDate) { lastDate=m.date; %>
-    <div class="date-separator text-center text-xs text-gray-500 my-4" data-date="<%= m.date %>">
-      <%= m.date %>
-    </div>
-    <% } %>
-  <%- include('message', { m }) %>
+<% let lastDate=null; %>
+<% messages.forEach(m=> { %>
+<% if (m.date !==lastDate) { %>
+<%- include('date-separator', { date: m.date }) %>
+<% lastDate=m.date; %>
+<% } %>
+<%- include('message', { m }) %>
 <% }) %>
