--- a/views/partials/message.ejs
+++ b/views/partials/message.ejs
@@ -1,36 +1,45 @@
-    <div class="chat-item flex w-full mb-2">
-      <div class=" inline-flex flex-col max-w-[75%] px-3 py-2 rounded-lg shadow <%= m.isYourself ? 'ml-auto' : '' %>   <%= m.effects.bubbleClass || (m.isYourself ? 'bg-[#d9fdd3]' : 'bg-white') %> ">
+<%
+const bubbleClass = m.effects?.bubbleClass || '';
+const textClass = m.effects?.textClass || '';
+const badge = m.effects?.badge;
+const isYou = m.isYourself;
+%>
 
-        <% if (m.effects.badge) { %>
-        <div class="text-[10px] mb-1 inline-block px-2 py-[1px] rounded <%= m.effects.badge.class %>">
-          <%= m.effects.badge.label %>
-        </div>
-        <% } %>
+<div
+  class="is-flex mb-3"
+  style="
+    justify-content:<%= isYou ? 'flex-end' : 'flex-start' %>;
+  "
+>
+  <div
+    class="box p-3 <%= bubbleClass %>"
+    style="
+      max-width:75%;
+      border-radius:10px;
+      margin-<%= isYou ? 'right' : 'left' %>:8px;
+      background:<%= isYou ? '#d9fdd3' : '#ffffff' %>;
+      box-shadow:0 1px 1px rgba(0,0,0,.08);
+    "
+  >
 
-        <!-- username (only other users) -->
+    <% if (badge) { %>
+      <span class="tag is-rounded is-small <%= badge.class %> mb-1">
+        <%= badge.label %>
+      </span>
+    <% } %>
 
-        <div class="text-xs font-semibold  <%= m.isYourself ? 'text-green-700' : 'text-blue-700' %> mb-1">
-          <%= m.user %>
-        </div>
-
-        <!-- message text -->
-        <% if (m.isViewOnce) { %>
-        <div class="text-sm italic text-gray-500">
-          📷 Foto sekali lihat
-        </div>
-        <% } else if (m.text) { %>
-        <pre class=" font-sans text-sm whitespace-pre-wrap break-words text-left m-0 "><%= m.text %></pre>
-        <% } %>
-
-        <!-- media -->
-        <% if (m.media) { %>
-        <img src="<%= mediaBase %>/<%= m.media.name %>" class="mt-2 rounded max-w-full">
-        <% } %>
-
-        <!-- time -->
-        <div class="self-end text-[11px] opacity-60 mt-1">
-          <%= m.time %>
-        </div>
-
-      </div>
+    <div
+      class="<%= textClass %>"
+      style="white-space:pre-wrap; line-height:1.4;"
+    >
+      <%= m.text || '(view once media)' %>
     </div>
+
+    <div
+      class="has-text-right is-size-7 has-text-grey mt-1"
+    >
+      <%= m.time %>
+    </div>
+
+  </div>
+</div>
